improvement for app7